0.13.2
---------
Note: Mastery weights have been changed across the board. Updating is likely to rearrange mastery effects for your existing ships.

- Added missile OP cost stat.
- Modified the selection weights of almost every mastery. In general: mastery effects that were deprioritized before are now even more deprioritized.
    - Should result in fewer "useless" masteries showing up (though they still do have positive weight, and so can still show up occasionally).
- Increased-range-if-no-other-bonuses mastery: made the numbers nicer (now 5%, 8%, 15%, 25% depending on ship size).


0.13.1
---------
- Hotfix for a savefile-affecting issue related to the player ship graveyard.

0.13.0
----------
- Recompiled for Java 17.
- Updated to game version 0.98a.
- Hid mastery-related hullmods from codex (except for Extradimensional Rearrangement, which is unlocked when receiving it).
- Changed the hard-coded level-9 masteries in mastery_assignments.json to max-level, whatever that max level happens to be.
- Added tentative max-level masteries for Anubis (subject to change).

0.12.4
----------
- Fixed issue with particles if a ship's sprite's alphaMult was set to be greater than 1.
- Added no_auto_activate tag to "ignore no build-in" mastery (this only appears and therefore is only relevant in random mode).

0.12.3
----------
- Fixed issue with mastery effects getting un-applied after replaying a battle.
- Fixed solo replay not creating a battle instance, which could cause crashes with modded battle creation contexts.
- Temporary encounter dialog created for recent battles now copies the existing "core UI", increasing robustness and compatibility with mods that don't use null checks.
- Fixed latent crash issue with flagship tracker that was only being triggered by FSF (no version update, re-download latest version if you're still encountering this).
- Added missing comma in settings json (no version update, re-download latest version if you're still encountering this).
