@@ -98,9 +98,9 @@
     "SModCreditsCostNeg": "Reduces the credits cost of building in hullmods by %1$s.",
     "SModMPCost": "Increases the mastery point cost of building in hullmods by %1$s, down to a minimum of %2$s.",
     "SModMPCostNeg": "Reduces the mastery point cost of building in hullmods by %1$s.",
-    "RestorationCost": "Increases the cost of restoring damaged ships by %1$s.",
-    "RestorationCostNeg": "Reduces the cost of restoring damaged ships by %1$s.",
-    "SModRemoval": "Grants the ability to clear S-mods from ships.",
+    "RestorationCost": "Increases the cost of restoring this ship by %1$s.",
+    "RestorationCostNeg": "Reduces the cost of restoring this ship by %1$s.",
+    "SModRemoval": "Grants the ability to clear S-mods from this ship.",
     "SModRemovalPost": "All S-mods are removed. Costs nothing and refunds nothing.",
     "SModRemovalPostWithRefund": "All S-mods are removed. Costs nothing and refunds %1$s of spent credits and mastery points, rounded down.",
     "SModsOverCapacitySingle": "Grants the ability to bypass the standard S-mod limit, enabling installation of an additional %1$s S-mod.",
@@ -249,8 +249,8 @@
     "DroneStrikeBoost": "Increases the damage, speed, maneuverability, and hull integrity of drones launched by %1$s by %2$s, and negates the system's flux cost..",
     "DroneStrikeRegen": "Drones launched by %1$s have a %2$s chance of being quickly replaced. Destroying a frigate-sized or larger ship with a launched terminator drone boosts fighter replacement rate by %3$s.",
     "DroneStrikeRegenPost": "The replacement rate increase will only trigger if the drone deals the finishing blow.",
-    "BackArmorBoost": "Increases armor rating toward the back of ships by up to %1$s.",
-    "BackArmorBoostPost": "Armor plates above ships' center lines are not affected at all, whereas extremal armor plates gain the maximum effect. Doesn't affect minimum armor fraction for damage reduction calculation.",
+    "BackArmorBoost": "Increases armor rating toward the back of this ship by up to %1$s.",
+    "BackArmorBoostPost": "Armor plates above the ship's center lines are not affected at all, whereas extremal armor plates gain the maximum effect. Doesn't affect minimum armor fraction for damage reduction calculation.",
     "FlareLauncherWhileVenting": "While venting, all flare-type weapons periodically fire at a rate of %1$s per second.",
     "FlareLauncherWhileVentingPost": "Effect only occurs during active venting and not while passively venting or while the ship is overloaded.",
     "ShieldEfficiencyNearbyEnemies": "Reduces shield damage taken by %1$s for every frigate-sized or larger enemy ship within %2$s su.",
@@ -397,7 +397,8 @@
     "DriveFieldStabilizerBoost": "If %1$s is installed, increases the fleet's burn bonus by an additional %2$s.",
     "GroundSupportBoost": "If %1$s or %2$s is installed, increases the fleet's ground support bonus by an additional %3$s.",
     "MaxAutomatedCR": "The %1$s skill always grants an additional %2$s maximum combat readiness regardless of the fleet's automated ship points.",
-    "ApplyOfficerSkill": "Grants the non-elite effect of %1$s to ships not captained by an officer already possessing that skill.",
+    "ApplyOfficerSkill":"If this ship's captain doesn't have %1$s, grants its non-elite effect.\nIf this ship's captain has the non-elite version of the skill, grants its elite effect.",
+    "ApplyOfficerSkillPost": "The ship must be captained by an officer to be eligible to gain the skill's elite effect.",
     "ShieldHullmodPackage": "If 3 of the following hullmods are installed: %1$s, %2$s, %3$s, and %4$s, reduces shield damage taken by %5$s and shield upkeep by %6$s.",
     "ArmorHullmodPackage": "If %1$s and %2$s are installed, increases armor by an additional %3$s.",
     "ArmorHullmodPackagePost": "Effect stacks multiplicatively on top of other armor modifiers.",
